feat: Associate an API Key with accounts
